# website-source-hakyll

./: .gitignore  .travis.yml  404.html  404.markdown  CNAME  README.markdown  README.md  Setup.hs  _config.yml  about.markdown  atom.xml  bio.markdown  blog.tmproj  circle.yaml  circle.yml  contact.markdown  demo.html  deploy-key.enc  deploy-keys.enc  index.html  index.md  pubkey.asc  pull.html  resume.html  resume.markdown  site.cabal  site.hs
.circleci/: config.yml
.well-known/: keybase.txt
_includes/: analytics.html  google-font.html  listed-post.html  post_header.html  typekit-font.html
_layouts/: layout.html  main.html  post.html  resume.html
_plugins/: github.rb
_posts/: 2010-07-12-mobilecrunch-iphone-bumper.markdown  2010-07-12-real-men-drop-test-the-iphone-bumper-case.markdown  2010-07-23-gizmodo-white-things-break.markdown  2010-07-23-gizmodo-why-a-white-iphone-delay-is-great-news.markdown  2010-12-22-gamasutra-trainyard.markdown  2010-12-22-success-came-literally-overnight-trainyard-was.markdown  2011-01-01-wishboard.markdown  2011-03-15-fragility-of-free-the-brooks-review.markdown  2011-03-15-fragility-of-free.markdown  2011-03-17-merlin-mann-priorities.markdown  2011-03-17-mud-rooms-red-letters-and-real-priorities-43.markdown  2011-03-25-wishboard-a-work-in-progress.markdown  2011-03-25-wishboard.markdown  2011-03-28-goose-island.markdown  2011-04-02-engadget-minicaster-review.markdown  2011-04-02-minicaster-the-pocket-sized-hardware-based-H264-live-streaming-encoder.markdown  2011-04-05-nocturn.markdown  2011-04-06-hops-1.0-now-available.markdown  2011-04-15-dropbox-honeypot.markdown
_site/: 404.html  CNAME  about.html  atom.xml  bio.html  blog.tmproj  contact.html  demo.html  index.html  resume.html
about/: index.html  index.markdown
archive/: index.html
blog/: 2012-11-03-xcode-build-settings-part-1-preprocessing.markdown  2013-01-18-opinionated-settings-for-app-development-in-xcode.markdown  2013-03-30-designing-for-ios-blending-modes.markdown  2013-09-24-one-year.markdown  2014-03-07-liftoff-1-0.markdown  2014-04-16-test-driving-ios-a-primer.markdown  2014-06-11-swift-sequences.markdown  2014-10-10-stronglifts-week-one.markdown  2014-10-15-functional-swift-for-dealing-with-optional-values.markdown  2014-10-23-stronglifts-week-two-and-three.markdown  2014-11-03-stronglifts-week-four.markdown  2014-11-07-stronglifts-week-five.markdown  2014-11-15-stronglifts-week-six.markdown  2014-11-22-stronglifts-week-seven.markdown  2014-11-29-stronglifts-week-eight.markdown  (+5 more)
css/: default.css  (+4 more)
(+97 files in other folders)
