name:               site
version:            1.0.0
build-type:         Simple
cabal-version:      >= 1.10

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      IndexedRoute
  Build-Depends:        base >= 4.8 && < 5
                      , hakyll
                      , filepath

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.6.*
                  , site
  ghc-options:      -threaded
  default-language: Haskell2010
