name:                   site
version:                1.0.0
Author:                 Gordon Fontenot <gordon@fonten.io>
Maintainer:             Gordon Fontenot <gordon@fonten.io>
cabal-version:          >= 1.10
build-type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      IndexedRoute
  Build-Depends:        base >= 4.8 && < 5
                      , hakyll
                      , filepath

Executable site
  Default-Language:     Haskell2010
  Main-Is:              site.hs
  Build-Depends:        base
                      , hakyll == 4.7.*
                      , pandoc
                      , site

Source-Repository head
  Type:                 git
  Location:             https://github.com/gfontenot/website-source
