Name:                   site
Version:                1.0.0
Synopsis:               Personal Site
Homepage:               http://gordonfontenot.com
Author:                 Gordon Fontenot <gordon@fonten.io>
Maintainer:             Gordon Fontenot <gordon@fonten.io>
Build-Type:             Simple
Cabal-Version:          >= 1.10

Executable site
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  Main-Is:              Site.hs
  GHC-Options:          -Wall -threaded
  other-modules:        Site.Compilers
                      , Site.Configurations
                      , Site.Constants
                      , Site.Contexts
                      , Site.Patterns
                      , Site.Routes
                      , Site.URLHelper
  Build-Depends:        base
                      , hakyll
                      , pandoc
                      , filepath
                      , containers

Source-Repository head
  Type:                 git
  Location:             https://github.com/gfontenot/website-source
